fix scroller on smaller devives

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css?family=Domine:400,700&display=swap");
 
 body {
-  background-color: #ffffff;
+  background-color: #f9f9f9;
   font-family: "serif";
   font-size: 14px;
   overflow-x: hidden;
@@ -66,6 +66,7 @@ body.loading {
   padding: 20px;
   max-width: 100%;
   margin: 0 auto;
+  z-index: 10;
 }
 
 #sections {
@@ -73,8 +74,8 @@ body.loading {
   display: inline-block;
   flex-direction: column;
   width: 250px;
-  top: 60px;
-  z-index: 101;
+  top: 40px;
+
   margin-right: 50px;
 }
 
@@ -102,7 +103,9 @@ svg {
 }
 /* static class */
 #vis.static {
-  position: absolute;
+  position: sticky;
+  width: 100%;
+  height: 100%;
 }
 
 .categoryLegend {
@@ -110,7 +113,7 @@ svg {
 }
 
 .step {
-  margin-bottom: 100px;
+  margin-bottom: 0px;
   min-height: 700px;
   font-weight: 400;
   line-height: 1.4em;
@@ -121,9 +124,15 @@ svg {
   width: 90%; /* Adjust as needed */
 }
 
-#step.z {
+.step.z {
   z-index: 1000;
-  position: absolute;
+}
+
+.step.ghost {
+  position: relative;
+  background-color: #ffffff;
+  opacity: 0;
+  z-index: -1;
 }
 
 .image-group {
@@ -258,8 +267,7 @@ svg circle:hover {
     margin: 0px auto; /* Center horizontally and add vertical spacing */
     text-align: center; /* Center the text content */
     border-width: 2px;
-    margin-bottom: 500px;
-    background-color: rgb(239, 249, 247);
+    background-color: rgb(239, 249, 247, 0.5);
     border-radius: 15px;
     padding: 20px;
   }
@@ -273,7 +281,6 @@ svg circle:hover {
   #sections {
     flex: 1;
     max-width: 400px;
-    z-index: 0;
     width: 100%;
   }
 
@@ -281,6 +288,7 @@ svg circle:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
   }
 
   #vis {
@@ -289,13 +297,6 @@ svg circle:hover {
     transform: translateX(-50%); /* Shift left by 50% of #vis's width */
     width: 90%; /* Adjust width for better fit on small screens */
     max-width: 800px; /* Optional: Set a smaller max-width */
-  }
-
-  #vis.static {
-    position: sticky;
-    top: 0px;
-    left: 80%; /* Position left edge at 50% of viewport width */
-    transform: translateX(-50%); /* Shift left by 50% of #vis's width */
   }
 
   #map-container {
